k8s/finpay-prod/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: finpay-prod
  labels:
    app.kubernetes.io/name: finpay
    app.kubernetes.io/instance: finpay-prod
    app.kubernetes.io/managed-by: kubectl
    environment: production
